--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"ext-mbstring": "*",
 		"phpgt/cssxpath": ">=1.1.2",
 		"phpgt/propfunc": "^1.0",
-		"psr/http-message": "^1.0"
+		"psr/http-message": "^1.0",
+		"twig/twig": "^3.0"
 	},
 
 	"require-dev": {
