--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
 		"phpgt/cssxpath": ">=1.1.2",
 		"phpgt/propfunc": "^1.0",
 		"psr/http-message": "^1.0",
-		"twig/twig": "^3.0"
+
+		"twig/twig": "^3.0",
+		"smarty/smarty": "~3.1",
+		"mustache/mustache": "~2.5"
 	},
 
 	"require-dev": {
